--- a/zmanimbot/.classpath
+++ b/zmanimbot/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/smack.jar"/>
 	<classpathentry kind="lib" path="lib/smackx.jar"/>
 	<classpathentry kind="lib" path="lib/zmanim-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jtwitter.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
