--- a/trunk/ZmanimBotRobot/war/WEB-INF/web.xml
+++ b/trunk/ZmanimBotRobot/war/WEB-INF/web.xml
@@ -12,6 +12,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>zmanim-bot</servlet-name>
 		<url-pattern>/_wave/robot/jsonrpc</url-pattern>
 	</servlet-mapping>
+	<servlet>
+        <servlet-name>profile</servlet-name>
+        <servlet-class>google.waveapps.zmanimbot.ZmanimBotProfile</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>profile</servlet-name>
+        <url-pattern>/_wave/robot/profile</url-pattern>
+    </servlet-mapping>
+
 	<!-- 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
